--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -22,6 +22,27 @@
     }
   }
 
+  .cellWithImg {
+    display: flex;
+    align-items: center;
+  
+    .cellImg {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-right: 20px;
+    }
+  }
+
+  .deleteButton {
+    padding: 2px 5px;
+    border-radius: 5px;
+    color: crimson;
+    border: 1px dotted rgba(220, 20, 60, 0.6);
+    cursor: pointer;
+  }
+
   .cellAction {
     display: flex;
     align-items: center;
